<resources>
    <string name="app_name">boop</string>
    <string name="color_picker">Color Mode</string>
    <string name="engine_handler">Synth Engine</string>
    <string name="pitch_control_title">Pitch Control</string>
    <string name="tonic_description">Tonic Note</string>
    <string name="wave1_description">00</string>
    <string name="wave2_description">01</string>
    <string name="chord_description">Chord</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="hz">Hz</string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="oscillator_control_title">Oscillator Control</string>
    <string name="adsr_control_title">A·D·S·R Control</string>
    <string name="touch_a_pad">Touch a pad</string>
    <string name="color_control">Color Control</string>
    <string name="square">Square</string>
    <string name="sin">Sin</string>
    <string name="saw">Saw</string>
    <string name="emptyADSRdescription">0.0</string>
    <string name="preset">Preset</string>
    <string name="preset_control">Preset Control</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="preset_name">Preset Name</string>
    <string name="sampler_save_text">SAVE</string>
    <string name="sampler_rec_text">REC</string>
    <string name="sampler_load_text">LOAD</string>
</resources>
