<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|start"
        tools:ignore="UselessParent"
    >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="?attr/colorPrimary"
            android:elevation="200dp"
            android:text="@string/preset_control"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/module_border"
            android:elevation="150dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
        >


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".5"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5"/>


            <TextView
                android:id="@+id/preset_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/preset_name"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toTopOf="@+id/preset_filename"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <AutoCompleteTextView
                android:id="@+id/preset_filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="?attr/colorOnPrimary"
                android:ems="12"
                android:hint="@string/preset_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/save_button"
                style="@style/Widget.Boop.ControlModule.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toStartOf="@+id/vertical_center"
                app:layout_constraintStart_toStartOf="@+id/preset_filename"
                app:layout_constraintTop_toTopOf="@+id/horizontal_center" />

            <Button
                android:id="@+id/load_button"
                style="@style/Widget.Boop.ControlModule.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/load"
                app:layout_constraintEnd_toEndOf="@+id/preset_filename"
                app:layout_constraintStart_toStartOf="@+id/vertical_center"
                app:layout_constraintTop_toTopOf="@+id/horizontal_center" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>